--- a/index.html
+++ b/index.html
@@ -8,14 +8,14 @@
     <!-- Meta etiquetas para la vista previa en redes sociales (Open Graph) -->
     <meta property="og:title" content="enviar mensaje ❤️">
     <meta property="og:description" content="WhatsApp">
-    <meta property="og:image" content="https://i.postimg.cc/nLhnwShm/20240304-202502-2.jpg">
+    <meta property="og:image" content="https://i.postimg.cc/s2X1yPdh/i.jpg">
     <meta property="og:url" content="https://shorter.me/WhatsApp1">
     
     <!-- Meta etiquetas para Twitter Cards -->
     <meta name="twitter:card" content="summary_large_image">
     <meta name="twitter:title" content="enviar mensaje ❤️">
     <meta name="twitter:description" content="WhatsApp">
-    <meta name="twitter:image" content="https://i.postimg.cc/nLhnwShm/20240304-202502-2.jpg">
+    <meta name="twitter:image" content="https://i.postimg.cc/s2X1yPdh/i.jpg">
     <meta name="twitter:url" content="https://shorter.me/WhatsApp1">
     <meta name="twitter:site" content="@tu_usuario_de_twitter">
 
